[gd_scene load_steps=4 format=3 uid="uid://7ttsum48jaea"]

[ext_resource type="Script" uid="uid://cnvfrqboiyhjq" path="res://Scenes/Enemies/EnemyBase.gd" id="1_srcxp"]
[ext_resource type="PackedScene" uid="uid://qq0gjyel2fm6" path="res://Scenes/OutOfTime/OutOfTime.tscn" id="2_2a3kf"]
[ext_resource type="PackedScene" uid="uid://bmro7b1m2xupt" path="res://Scenes/HealthBar/HealthBar.tscn" id="3_m1s7c"]

[node name="EnemyBase" type="PathFollow2D"]
rotates = false
loop = false
script = ExtResource("1_srcxp")

[node name="OutOfTime" parent="." instance=ExtResource("2_2a3kf")]
life_s = 30.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="Booms" type="Node2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("3_m1s7c")]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
